-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
None
-
f36a1b9 (qtdeclarative)
The Window component has a contentItem property but it is not documented.
It is however mentioned in the attached properties documentation.
| For Gerrit Dashboard: QTBUG-53045 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 157342,2 | Doc: Document Window.contentItem QML property | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |