Doc: Document Window.contentItem QML property

Change-Id: I6914919675e8787312824ac958e3ea3fb6dc5264
Task-number: QTBUG-53045
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>